--- a/Class-Notes/CSS/Microsoft-Clone/style.css
+++ b/Class-Notes/CSS/Microsoft-Clone/style.css
@@ -1,30 +1,44 @@
-.navigation-bar-container {
-    border: 2px solid blue;
-    display: flex;
-    font-size: 10px;
-    padding: 0;
-    justify-content: space-between;
-    align-items: flex-end;
-    height: 4vh;
-}
-
 img {
     margin: 0;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
-
-.left-navigation-list {
-    border: 2px solid black;
+.header {
+    /* border: 4px solid green; */
     display: flex;
+    justify-content: space-between;
+    margin: 10px 10px 10px 10px;
+}
+.navigation-bar-container {
+    /* border: 2px solid blue; */
+    display: flex;
+    font-size: 10px;
+    justify-content: space-between;
+    flex-basis: 100%;
+    align-items: flex-start;
+}
+.left-navigation-list {
+    /* border: 2px solid black; */
+    display: flex;
+    height: 100%;
+    flex-basis: 50%;
+    justify-content: flex-start;
+    padding: 0;
+    margin: 0 0 0 15px;
 }
 .right-navigation-list {
-    border: 2px solid black;
+    /* border: 2px solid red; */
     display: flex;
+    flex-basis: 30%;
+    justify-content: flex-end;
+    margin: 0;
 }
-ul > li {
+ul > li, ul > i {
     list-style-type: none;
-    margin: 0 2vw 0 2vw;
-    padding: 0;
+    margin: 0 5px 0 5px;
+}
+ul > li:hover {
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 .display-container {
@@ -98,11 +112,15 @@ ul > li {
 .option a {
     font-size: 12px;
 }
-i {
+
+.option i {
     font-size: 24px;
 }
 
-
+.microsoft-logo {
+    width: auto;
+    height: 2.5vw;
+}
 
 
 
